--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "David Haukeness",
   "license": "GPLv3",
   "dependencies": {
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.13.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.3",
