--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "David Haukeness",
   "license": "GPLv3",
   "dependencies": {
+    "better-sqlite3": "^8.7.0",
+    "db-migrate": "^0.11.14",
     "discord.js": "^14.13.0",
+    "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "sequelize-cli": "^6.6.1"
   }
 }
