--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development node index.js",
-    "prod": "node index.js"
+    "prod": "node index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "David Haukeness",
@@ -15,13 +16,17 @@
     "better-sqlite3": "^8.7.0",
     "db-migrate": "^0.11.14",
     "discord.js": "^14.13.0",
+    "node-schedule": "^2.1.1",
+    "parse-duration": "^1.1.0",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
+    "jest": "^29.7.0",
     "sequelize-cli": "^6.6.1"
   }
 }
