--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vavite-loader vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
@@ -17,16 +17,23 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/node": "^20.8.4",
+		"@types/uuid": "^9.0.5",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"@vavite/node-loader": "^3.0.0",
+		"autoprefixer": "^10.4.16",
+		"daisyui": "^3.9.2",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.31",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
@@ -34,11 +41,17 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.4.2",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"bufferutil": "^4.0.7",
+		"cron-time-generator": "^2.0.1",
+		"cronstrue": "^2.32.0",
 		"discord-api-types": "^0.37.60",
 		"discord.js": "^14.13.0",
+		"sequelize": "^6.33.0",
+		"sqlite3": "^5.1.6",
 		"utf-8-validate": "^6.0.3",
+		"uuid": "^9.0.1",
 		"zlib-sync": "^0.1.8"
 	}
 }
